# vpl-jail-system

./: .dockeringnore  .env  .gitignore  .project  .travis.yml  AUTHORS  CONFIGURATION.md  ChangeLog  DockerFile  Dockerfile  Dockerfile.certbot  Dockerfile.letsencrypt  Dockerfile.no_https  HOWTO.txt  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  NOTES.txt  README  README.md  compose.letsencrypt.yaml  compose.no_https.yaml  compose.yaml  config.h  config.h.in  configure  configure.ac  configure.scan  docker-install-vpl-sh  download-install-vpl-sh  entrypoint.sh  install-bash-sh  install-sh  install-vpl-sh  runDockerComposeTest.sh  runDockerTest.sh  runTest.sh  uninstall-sh  (+17 more)
.github/workflows/: release.yml  vpl-jail-server-ci.yml  vpl-rpcserver-ci.yml
cgroup.test/cpu,cpuacct/: tasks
cgroup.test/memory/: memory.stat  tasks
cgroup.test/net_cls,net_prio/: tasks
cgroup/blkio/: blkio.throttle.io_service_bytes_recursive  blkio.throttle.io_serviced
cgroup/cpu,cpuacct/: cgroup.procs  cpuacct.usage_all
cgroup/memory/: tasks
cgroup/net_cls,net_prio/: cgroup.procs  net_prio.ifpriomap  tasks
docs/: Makefile
docs/source/: conf.py  configuration.rst  index.rst  installation.rst  introduction.rst  license.rst  releasenotes.rst  requirements.rst  troubleshooting.rst
docs/source/_templates/: footer.html
launchers/: vpl_batch_launcher.sh  vpl_terminal_launcher.sh  vpl_vnc_launcher.sh  vpl_vnc_stopper.sh  vpl_web_launcher.sh
packages_files/: basic.apk.lst  basic.apt.lst  basic.dnf.lst  basic.yum.lst  full.apk.lst  full.apt.lst  full.dnf.lst  full.yum.lst  minimum.apk.lst  minimum.apt.lst  minimum.dnf.lst  minimum.yum.lst  standard.apk.lst  standard.apt.lst  standard.dnf.lst  standard.yum.lst
src/: Makefile  Makefile.am  Makefile.in  cgroup.cpp  cgroup.h  configuration.cpp  configuration.h  configurationFile.cpp  configurationFile.h  datamessage.h  httpException.h  httpServer.cpp  httpServer.h  jail.cpp  jail.h  jail_limits.h  json.cpp  json.h  jsonrpc.h  lock.h  log.cpp  log.h  main.cpp  processMonitor.cpp  processMonitor.h  redirector.cpp  redirector.h  requestmessage.h  rpc.h  socket.cpp  socket.h  test.cpp  util.cpp  util.h  vpl-jail-server.cpp  vpl-jail-server.h  vpl-xmlrpc-jail.cpp  vplregex.h  webSocketEchoTest.cpp  websocket.cpp  (+4 more)
src/tests/: test.cpp  test.sh
tests/: Makefile  basetest.cpp  basetest.h  cgrouptest.cpp  configurationtest.cpp  jailtest.cpp  jsontest.cpp  test.cpp  utiltest.cpp  vplregexptest.cpp  webSocketClient.py  webSocketEchoTest.cpp  xmlrpctest.cpp
tests/cgroup/cpu,cpuacct/: cpuacct.stat  cpuacct.usage  tasks
tests/cgroup/memory/: memory.usage_in_bytes
tests/cgroup/pids/: cgroup.procs
tests/configfiles/: full.txt
tests/jsondata/: available.json  directrun.json  getresult.json  request.json  request1.json  running.json  stop.json
tests/xmlrpcdata/: available.xml  directrun.xml  getresult.xml  request.xml  running.xml  stop.xml
