SUBDIRS=src
dist_pkgdata_DATA = launchers/vncaccel.sh launchers/vpl_terminal_launcher.sh launchers/vpl_vnc_launcher.sh
dist_pkgdata_DATA += launchers/vpl_batch_launcher.sh launchers/vpl_web_launcher.sh launchers/vpl_vnc_stopper.sh
dist_pkgdata_DATA += packages_files/minimum.dnf.lst packages_files/basic.dnf.lst packages_files/standard.dnf.lst packages_files/full.dnf.lst
dist_pkgdata_DATA += packages_files/minimum.apt.lst packages_files/basic.apt.lst packages_files/standard.apt.lst packages_files/full.apt.lst
dist_pkgdata_DATA += packages_files/minimum.apk.lst packages_files/basic.apk.lst packages_files/standard.apk.lst packages_files/full.apk.lst
dist_pkgdata_DATA += vpl-jail-system.service vpl-jail-system.initd vpl-jail-system.conf
dist_pkgdata_DATA += install-vpl-sh install-bash-sh download-install-vpl-sh uninstall-sh
dist_pkgdata_DATA += Dockerfile Dockerfile.certbot Dockerfile.no_https Dockerfile.letsencrypt
dist_pkgdata_DATA += compose.yaml compose.no_https.yaml compose.letsencrypt.yaml .env

