bin_PROGRAMS = vpl-jail-server websocket-echo-test program-test
vpl_jail_server_SOURCES = vpl-jail-server.cpp vpl-jail-server.h jail.cpp jail.h\
httpServer.cpp httpServer.h httpException.h\
redirector.cpp redirector.h\
configurationFile.cpp configurationFile.h\
configuration.cpp configuration.h\
processMonitor.cpp processMonitor.h\
socket.cpp socket.h\
websocket.cpp websocket.h\
util.cpp util.h rpc.h xml.h jail_limits.h lock.h

websocket_echo_test_SOURCES= webSocketEchoTest.cpp socket.cpp socket.h\
websocket.cpp websocket.h\
util.cpp util.h rpc.h xml.h jail_limits.h lock.h

program_test_SOURCES= test.cpp socket.cpp socket.h\
websocket.cpp websocket.h\
util.cpp util.h rpc.h xml.h jail_limits.h lock.h

# set the include path found by configure
#INCLUDES= $(all_includes)

# the library search path.
#AM_LDFLAGS = $(all_libraries)
