bin_PROGRAMS = vpl-jail-server
vpl_jail_server_SOURCES = main.cpp vpl-jail-server.cpp vpl-jail-server.h jail.cpp jail.h\
httpServer.cpp httpServer.h httpException.h\
redirector.cpp redirector.h\
configurationFile.cpp configurationFile.h\
configuration.cpp configuration.h\
processMonitor.cpp processMonitor.h\
socket.cpp socket.h\
websocket.cpp websocket.h\
util.cpp util.h rpc.h xml.h jail_limits.h lock.h\
cgroup.cpp cgroup.h vplregex.h

# set the include path found by configure
#INCLUDES= $(all_includes)

# the library search path.
#AM_LDFLAGS = $(all_libraries)

AM_CXXFLAGS = -std=c++11
